--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
   - docker push lmanyange/multi-nginx
   - docker push lmanyange/multi-server
   - docker push lmanyange/multi-worker
+
+deploy:
+  edge: true
+  provider: elasticbeanstalk
+  region: af-south-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-af-south-1-403524832661
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
